--- a/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
@@ -119,9 +119,6 @@ class {{ graph.name }}({{ graph.superclass }}):
         self.any_char = self.{{ graph.options['dot'] }}
         {% endif %}
 
-    def EOF(self, *args, **kwargs):
-        pass
-
     {% for rule in graph.imag_rules %}
     def {{ rule.id }}(self, parent=None):
         return UnlexerRule(name='{{ rule.id }}', parent=parent)
@@ -134,6 +131,7 @@ class {{ graph.name }}({{ graph.superclass }}):
     {% for rule in graph.rules %}
     @depthcontrol
     def {{ rule.id }}(self, parent=None):
+        {% if rule.id != 'EOF' %}
         {% if rule.has_var %}
         local_ctx = dict()
         {% endif %}
@@ -144,6 +142,9 @@ class {{ graph.name }}({{ graph.superclass }}):
         {% endfor %}
         self.exit_rule(current)
         return current
+        {% else %}
+        pass
+        {% endif %}
     {{ rule.id }}.min_depth = {{ rule.min_depth }}
 
     {% endfor %}
