Add grammar analyzer functionality to grammarinator-process
This new funcionality helps identifying cycles in the graph and it
looks for unavailable rules from a user-defined start rule.
Furthermore, it finds the farthest rule from a starting rule
- this can be predefined or the first parser rule. This information
can be useful by generation when parametrizing the max-depth argument.
The node classes representing the grammar tree are extended with
__str__ and print_tree methods.

--- a/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
@@ -63,7 +63,7 @@ with AlternationContext(self, [{{ node.min_depth | join(', ') }}], [{{ node.cond
     [{% for rule in simple_rules %}self.{{ rule }}{% if not loop.last %}, {% endif %}{% endfor %}][choice{{ node.idx }}](parent=current)
     {% else %}
     {% for child in node.out_neighbours %}
-    {{ 'if' if loop.index0 == 0 else 'elif' }} choice{{ node.idx }} == {{ loop.index0 }}:
+    {{ 'if' if loop.index0 == 0 else 'elif' }} choice{{ node.idx }} == {{ child.idx }}:
         {{ processNode(child) | indent | indent -}}
     {% endfor %}
     {% endif %}
