Introduce a new context manager to handle depth control and enter/exit calls
Introduce RuleContext which incorporates the functionality of the depthcontrol
decorator and the enter and exit rule calls. This way, the depthcontrol
decorator is not needed anymore, hence eliminated.

--- a/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
@@ -122,19 +122,16 @@ class {{ graph.name }}({{ graph.superclass }}):
     {% endif %}
 
     {% for rule in graph.rules %}
-    @depthcontrol
     def {{ rule.id }}(self, parent=None):
         {% if rule.id != 'EOF' %}
         {% if rule.has_var %}
         local_ctx = dict()
         {% endif %}
-        current = {{ rule.type }}(name='{{ rule.id }}', parent=parent)
-        self._enter_rule(current)
-        {% for child in rule.out_neighbours %}
-        {{ processNode(child) | indent | indent -}}
-        {% endfor %}
-        self._exit_rule(current)
-        return current
+        with RuleContext(self, {{ rule.type }}(name='{{ rule.id }}', parent=parent)) as current:
+            {% for child in rule.out_neighbours %}
+            {{ processNode(child) | indent | indent | indent -}}
+            {% endfor %}
+            return current
         {% else %}
         pass
         {% endif %}
