--- a/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
@@ -7,46 +7,47 @@
  # according to those terms.
  #}
 
-{% macro processVariableNode(node) %}
-local_ctx['{{ node.name }}'] = current.last_child
+{% macro processVariableNode(node, args) %}
+local_ctx['{{ node.name }}']{% if node.is_list %}.append(current.last_child){% else %} = current.last_child{% endif %}
+
 {% endmacro %}
 
 
-{% macro processActionNode(node) %}
+{% macro processActionNode(node, args) %}
 {{ node.src | substitute('\$(?P<var_name>\\w+)', 'local_ctx[\'\\g<var_name>\']') }}
 {% endmacro %}
 
 
-{% macro processLambdaNode(node) %}
+{% macro processLambdaNode(node, args) %}
 pass
 {% endmacro %}
 
 
-{% macro processRuleNode(node) %}
-self.{{ node.id }}(parent=current)
+{% macro processRuleNode(node, args) %}
+self.{{ node.id }}({% if args %}{% for k, v in args.items() %}{{ k }}{% if v %}={{ v }}{% endif %}, {% endfor %}{% endif %}parent=current)
 {% endmacro %}
 
 
-{% macro processCharsetNode(node) %}
+{% macro processCharsetNode(node, args) %}
 UnlexerRule(src=self._model.charset(current, {{ node.idx }}, self._charsets[{{ node.charset }}]), parent=current)
 {% endmacro %}
 
 
-{% macro processLiteralNode(node) %}
+{% macro processLiteralNode(node, args) %}
 UnlexerRule(src='{{ node.src | escape_string }}', parent=current)
 {% endmacro %}
 
 
-{% macro processQuantifierNode(node) %}
+{% macro processQuantifierNode(node, args) %}
 if self._max_depth >= {{ 0 if node.min == 1 else node.min_depth }}:
     for _ in self._model.quantify(current, {{ node.idx }}, min={{ node.min }}, max={{ node.max }}):
-    {% for child in node.out_neighbours %}
-        {{ processNode(child) | indent | indent -}}
+    {% for edge in node.out_edges %}
+        {{ processNode(edge.dst, edge.args) | indent | indent -}}
     {% endfor %}
 {% endmacro %}
 
 
-{% macro processAlternationNode(node) %}
+{% macro processAlternationNode(node, args) %}
 with AlternationContext(self, [{{ node.min_depth | join(', ') }}], [{{ node.conditions | join(', ') | substitute('\$(?P<var_name>\\w+)', 'local_ctx[\'\\g<var_name>\']') }}]) as weights{{ node.idx }}:
     choice{{ node.idx }} = self._model.choice(current, {{ node.idx }}, weights{{ node.idx }})
     {% set simple_lits, simple_rules = node.simple_alternatives() %}
@@ -62,22 +63,22 @@ with AlternationContext(self, [{{ node.min_depth | join(', ') }}], [{{ node.cond
     {% elif simple_rules %}
     [{% for rule in simple_rules %}self.{{ rule }}{% if not loop.last %}, {% endif %}{% endfor %}][choice{{ node.idx }}](parent=current)
     {% else %}
-    {% for child in node.out_neighbours %}
-    {{ 'if' if loop.index0 == 0 else 'elif' }} choice{{ node.idx }} == {{ child.idx }}:
-        {{ processNode(child) | indent | indent -}}
+    {% for edge in node.out_edges %}
+    {{ 'if' if loop.index0 == 0 else 'elif' }} choice{{ node.idx }} == {{ edge.dst.idx }}:
+        {{ processNode(edge.dst, edge.args) | indent | indent -}}
     {% endfor %}
     {% endif %}
 {% endmacro %}
 
 
-{% macro processAlternativeNode(node) %}
-{% for child in node.out_neighbours %}
-{{ processNode(child) -}}
+{% macro processAlternativeNode(node, args) %}
+{% for edge in node.out_edges %}
+{{ processNode(edge.dst, edge.args) -}}
 {% endfor %}
 {% endmacro %}
 
 
-{% macro processNode(node) %}
+{% macro processNode(node, args) %}
 {% set processors = {
     'QuantifierNode': processQuantifierNode,
     'UnlexerRuleNode': processRuleNode,
@@ -92,7 +93,7 @@ with AlternationContext(self, [{{ node.min_depth | join(', ') }}], [{{ node.cond
     'VariableNode': processVariableNode,
     }
 %}
-{{ processors[node.__class__.__name__](node) -}}
+{{ processors[node.__class__.__name__](node, args) -}}
 {% endmacro %}
 
 
@@ -132,14 +133,17 @@ class {{ graph.name }}({{ graph.superclass }}):
     {% endif %}
 
     {% for rule in graph.rules %}
-    def {{ rule.id }}(self, parent=None):
+    def {{ rule.id }}(self, {% for key, value in rule.args.items() %}{{ key }}={{ value }}, {% endfor %}parent=None):
         {% if rule.id != 'EOF' %}
         {% if rule.has_var %}
-        local_ctx = dict()
+        local_ctx = dict({% for key, value in rule.attributes.items() %}{{ key }}={% if key in rule.args %}{{ key }}{% else %}{{ value }}{% endif %}{% if not loop.last or rule.labels %}, {% endif %}{% endfor %}{% for name, is_list in rule.labels.items() %}{{ name }}={% if is_list %}[]{% else %}None{% endif %}{% if not loop.last %}, {% endif %}{% endfor %})
         {% endif %}
         with RuleContext(self, {{ rule.type }}(name='{{ rule.id }}', parent=parent)) as current:
-            {% for child in rule.out_neighbours %}
-            {{ processNode(child) | indent | indent | indent -}}
+            {% for edge in rule.out_edges %}
+            {{ processNode(edge.dst, edge.args) | indent | indent | indent -}}
+            {% endfor %}
+            {% for ret in rule.returns %}
+            current.{{ ret }} = local_ctx['{{ ret }}']
             {% endfor %}
             return current
         {% else %}
