Improve the handling of escape and unicode sequences
The patch supports the handling of extended unicode codepoints in string
literals, it fixes the charcode determination in charsets and "not sets".

--- a/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
@@ -33,7 +33,7 @@ UnlexerRule(src=self._model.charset(current, {{ node.idx }}, self._charsets[{{ n
 
 
 {% macro processLiteralNode(node) %}
-UnlexerRule(src='{{ node.src }}', parent=current)
+UnlexerRule(src='{{ node.src | escape_string }}', parent=current)
 {% endmacro %}
 
 
