--- a/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/resources/codegen/GeneratorTemplate.py.jinja
@@ -1,5 +1,5 @@
 {#
- # Copyright (c) 2020-2022 Renata Hodovan, Akos Kiss.
+ # Copyright (c) 2020-2023 Renata Hodovan, Akos Kiss.
  #
  # Licensed under the BSD 3-Clause License
  # <LICENSE.rst or https://opensource.org/licenses/BSD-3-Clause>.
@@ -47,7 +47,7 @@ if self._max_depth >= {{ 0 if node.min == 1 else node.min_depth }}:
 
 
 {% macro processAlternationNode(node) %}
-with AlternationContext(self, [{{ node.min_depth | join(', ') }}], [{{ node.conditions | join(', ') }}]) as weights{{ node.idx }}:
+with AlternationContext(self, [{{ node.min_depth | join(', ') }}], [{{ node.conditions | join(', ') | substitute('\$(?P<var_name>\\w+)', 'local_ctx[\'\\g<var_name>\']') }}]) as weights{{ node.idx }}:
     choice{{ node.idx }} = self._model.choice(current, {{ node.idx }}, weights{{ node.idx }})
     {% set simple_lits, simple_rules = node.simple_alternatives() %}
     {% if simple_lits and simple_rules %}
