--- a/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
@@ -125,8 +125,8 @@ class {{ graph.name }}({{ graph.superclass }}):
         return UnlexerRule(name='{{ rule.id }}', parent=parent)
     {% endfor %}
 
-    {%- if graph.member %}
-    {{ graph.member | trim | indent }}
+    {%- if graph.members %}
+    {{ graph.members | trim | indent }}
     {% endif %}
 
     {% for rule in graph.rules %}
