Don't shadow builtin min and max in quantifier-related code
Both the tools (the processor, the codegen template) and the
runtime (the models) contain code that deals with quantifiers.
Quantification has lower and upper bounds, which are traditionally
named min and max. However, having min and max as function
arguments (like in models) shadows the Python builtins. To avoid
this and make the builtins available, min is renamed to start while
max is renamed to stop all around the code base (terminology
borrowed from the range Python builtin).

--- a/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
@@ -48,7 +48,7 @@ current.src += '{{ node.src | escape_string }}'
 
 
 {% macro processQuantifierNode(node, inedge) %}
-with QuantifierContext(self, {{ node.idx }}, {{ node.min }}, {{ node.max }}, RuleSize({{ node.min_size.depth }}, {{ node.min_size.tokens }}), {{ inedge.reserve }}) as quant{{ node.idx }}:
+with QuantifierContext(self, {{ node.idx }}, {{ node.start }}, {{ node.stop }}, RuleSize({{ node.min_size.depth }}, {{ node.min_size.tokens }}), {{ inedge.reserve }}) as quant{{ node.idx }}:
     while quant{{ node.idx }}(current):
     {% for edge in node.out_edges %}
         {{ processNode(edge.dst, edge) | indent | indent -}}
