--- a/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
@@ -144,7 +144,7 @@ class {{ graph.name }}({{ graph.superclass }}):
     def {{ rule.id }}(self, {% for k, v in rule.args %}{{ k }}{% if v %}={{ resolveVarRefs(v) }}{% endif %}, {% endfor %}parent=None):
         {% if rule.id != 'EOF' %}
         {% if rule.labels or rule.args or rule.locals or rule.returns %}
-        local_ctx = dict({% for k, _ in rule.args %}{{ k }}={{ k }}{% if not loop.last %}, {% endif %}{% endfor %}{% if rule.args and (rule.locals + rule.returns) %}, {% endif %}{% for k, v in (rule.locals + rule.returns) %}{{ k }}{% if v %}={{ resolveVarRefs(v) }}{% endif %}{% if not loop.last or rule.labels %}, {% endif %}{% endfor %}{% for name, is_list in rule.labels.items() %}{{ name }}={% if is_list %}[]{% else %}None{% endif %}{% if not loop.last %}, {% endif %}{% endfor %})
+        local_ctx = {{ '{' }}{% for k, _ in rule.args %}'{{ k }}': {{ k }}{% if not loop.last %}, {% endif %}{% endfor %}{% if rule.args and (rule.locals + rule.returns) %}, {% endif %}{% for k, v in (rule.locals + rule.returns) %}'{{ k }}'{% if v %}: {{ resolveVarRefs(v) }}{% endif %}{% if not loop.last or rule.labels %}, {% endif %}{% endfor %}{% for name, is_list in rule.labels.items() %}'{{ name }}': {% if is_list %}[]{% else %}None{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}{{ '}' }}
         {% endif %}
         with {{ rule.type }}Context(self, '{{ rule.id }}', parent) as current:
             {% for edge in rule.out_edges %}
