Do not add rule nodes to their parent during initialization
Callers, typically Contexts, can take this responsibility. This
also ensures that by the time a child is added to its parent, the
child object is already fully constructed.

Related minor fixes:
- Make UnparserRule init argument keyword-only to align it with
  Rule and UnlexerRule.
- Don't pass parameters by name when using RuleContexts in tests
  to align the usage with generated code.

--- a/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
@@ -131,7 +131,8 @@ class {{ graph.name }}({{ graph.superclass }}):
 
     {% for rule in graph.imag_rules %}
     def {{ rule.id }}(self, parent=None):
-        return UnlexerRule(name='{{ rule.id }}', parent=parent)
+        with UnlexerRuleContext(self, '{{ rule.id }}', parent) as current:
+            return current
     {% endfor %}
 
     {%- if graph.members %}
