Be explicit about EOF() returning None instead of pass

--- a/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
@@ -154,7 +154,7 @@ class {{ graph.name }}({{ graph.superclass }}):
             {% endfor %}
             return current
         {% else %}
-        pass
+        return None
         {% endif %}
 
     {% endfor %}
