--- a/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
+++ b/grammarinator/tool/resources/codegen/GeneratorTemplate.py.jinja
@@ -162,13 +162,13 @@ class {{ graph.name }}({{ graph.superclass }}):
         with {{ rule.type }}Context(self, '{{ rule.name }}', parent) as rule:
             current = rule.current
             {% if rule.init %}
-            {{ resolveVarRefs(rule.init) }}
+            {{ resolveVarRefs(rule.init) | indent | indent | indent }}
             {% endif %}
             {% for edge in rule.out_edges %}
             {{ processNode(edge.dst, edge) | indent | indent | indent -}}
             {% endfor %}
             {% if rule.after %}
-            {{ resolveVarRefs(rule.after) }}
+            {{ resolveVarRefs(rule.after) | indent | indent | indent }}
             {% endif %}
             {% for _, k, _ in rule.returns %}
             current.{{ k }} = local_ctx['{{ k }}']
